--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,9 @@ spring:
     password: oracle
     driver-class-name: oracle.jdbc.OracleDriver
   jpa:
+    show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.OracleDialect
