--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
 			<version>1.5.2.Final</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
